Added CSRF security, sending email on different IP, honeypots, CSP mechanism, refactored and updated

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,11 +25,11 @@ spring:
           auth: true
           starttls:
             enable: true
-logging:
-  level:
+#logging:
+#  level:
 #    org.springframework.security: DEBUG
 #    org.hibernate: DEBUG
-    org.springframework.mail.javamail: DEBUG
+#    org.springframework.mail.javamail: DEBUG
 server:
   port: 443
   ssl:
